WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86959
DFG should not do unnecessary indirections when storing to objects
https://bugs.webkit.org/show_bug.cgi?id=86959
Summary
DFG should not do unnecessary indirections when storing to objects
Filip Pizlo
Reported
2012-05-20 01:42:04 PDT
Patch forthcoming.
Attachments
the patch
(6.30 KB, patch)
2012-05-20 01:44 PDT
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-05-20 01:44:27 PDT
Created
attachment 142896
[details]
the patch
Filip Pizlo
Comment 2
2012-05-21 14:51:33 PDT
Landed in
http://trac.webkit.org/changeset/117819
Filip Pizlo
Comment 3
2012-05-23 22:50:42 PDT
Merged in
http://trac.webkit.org/changeset/118324
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug