DFG should not do unnecessary indirections when storing to objects https://bugs.webkit.org/show_bug.cgi?id=86959

Reviewed by Oliver Hunt.

Merged r117819 from dfgopt.

* dfg/DFGByteCodeParser.cpp:
(JSC::DFG::ByteCodeParser::parseBlock):
* dfg/DFGCSEPhase.cpp:
(JSC::DFG::CSEPhase::getByOffsetLoadElimination):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):



Canonical link: https://commits.webkit.org/105093@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118324 268f45cc-cd09-0410-ab3c-d52691b4dbfc